--- a/package.json
+++ b/package.json
@@ -10,5 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.3.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/breakfastitem/READMEGenerator.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/breakfastitem/READMEGenerator/issues"
+  },
+  "homepage": "https://github.com/breakfastitem/READMEGenerator#readme"
 }
